Add additional logging for clock syncs not in the result

This logging is to try and track down a bug in which clock syncs are
occassionally not being included in the BattOr trace.

TBR=rnephew@chromium.org

Bug: 776117
Change-Id: Id8f6d2fd07829db889a883f5474b268e20730628
Reviewed-on: https://chromium-review.googlesource.com/726883
Reviewed-by: Charlie Andrews <charliea@chromium.org>
Reviewed-by: rnephew <rnephew@chromium.org>
Commit-Queue: Charlie Andrews <charliea@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509931}
Former-commit-id: ccf365ce3fa5e388be435c6797a07bd60107ac80